<resources>
    <string name="app_name">PCS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="cal">Calender</string>
    <string name="contact">Contact Us</string>
    <string name="home">Welcome to Crimson</string>
    <string name="weather">Weather</string>
    <string name="login">Log-In</string>
    <string name="hello">Hello World, LoginActivity!</string>
    <string name="rem">Remember Password</string>
    <string name="user">User Name</string>
    <string name="pwd">Password</string>
    <string name="forget">Forget Password?</string>
    <string name="design">Designed By:</string>
    <string-array name="De_Stuffing">
        <item>Container</item>
        <item>Passenger</item>
        <item>Other</item>
    </string-array>
     <string-array name="submission_port_array">
<item >INHAL1</item>
<item >INMRM1</item>
<item >INENR1</item>
<item >INVPT1</item>
<item >INNML1</item>
<item >INIXY1</item>
<item >INTUT1</item>
<item >INCOK1</item>
<item >INCCU1</item>
<item >INMUN1</item>
<item >INPRT1</item>
<item >INMAA1</item>
<item >INJNP1</item>
<item >INBOM1</item>
<item >SGSIN1</item>
<item >IN1</item>
<item >INCCU0</item>
<item >INVTZ1</item>
</string-array >
     
     <string name="ipa">IPA is an organisation that was conceived and constituted by the Major Ports of India under the Societies Registration act in 1966 with the prime objective of developing and increasing efficiency and productivity in ports and its working environment. The functioning body of IPA comprises of the Chairman of all Major Ports, which are the local authorities formed by a statute and function under the regulatory control of Ministry of Shipping, Road Transport &amp; Highways, Govt of India. The Chairman of Association is elected in the Annual General Meeting while the Secretariat of IPA is headed by the Managing Director who operates from New Delhi.</string>
     
     <string name="pcs">Port Community System (PCS) is intended to integrate the electronic flow of trade related document/information and function as the centralized hub for the ports of India and other stakeholders like Shipping Lines/Agents, Surveyors, Stevedores, Banks, Container Freight Stations, Customs House agents, Importers, Exporters, Railways/CONCOR, Government regulatory agencies, etc. for exchanging electronic messages in secure manner.</string>
     
     <string name="crimson">CrimsonLogic is a trusted partner to governments, providing end-to-end eGovernment solutions in trade facilitation, judiciary, tax, healthcare, citizen-centric and IT security domains. We help governments design and run innovative and sustainable services to collaborate more seamlessly with their citizens and ecosystem.</string>
     
     <string-array name="nations_array">
<item>AFGHANISTAN </item>
<item>ALBANIA </item>
<item>ALGERIA </item>
<item>AMERICAN SAMOA </item>
<item >ANDORRA </item>
<item >ANGOLA </item>
<item >ANGUILLA </item>
<item >ANTARCTICA </item>
<item >ANTIGUA AND BARBUDA </item>
<item >ARGENTINA </item>
<item >ARMENIA </item>
<item >ARUBA </item>
<item >AUSTRALIA </item>
<item >AUSTRIA </item>
<item >AZERBAIJAN </item>
<item >BAHAMAS </item>
<item >BAHRAIN </item>
<item >BANGLADESH </item>
<item >BARBADOS </item>
<item >BELARUS </item>
<item >BELGIUM </item>
<item >BELIZE </item>
<item >BENIN </item>
<item >BERMUDA </item>
<item >BHUTAN </item>
<item >BOLIVIA </item>
<item >BOSNIA AND HERZEGOVINA </item>
<item >BOTSWANA </item>
<item >BOUVET ISLAND </item>
<item >BRAZIL </item>
<item >BRITISH INDIAN OCEAN TERRITORY </item>
<item >BRUNEI DARUSSALAM </item>
<item >BULGARIA </item>
<item >BURKINA FASO </item>
<item >BURUNDI </item>
<item >CAMBODIA </item>
<item >CAMEROON </item>
<item >CANADA </item>
<item >CAPE VERDE </item>
<item >CAYMAN ISLANDS </item>
<item >CENTRAL AFRICAN REPUBLIC </item>
<item >CHAD </item>
<item >CHILE </item>
<item >CHINA </item>
<item >CHRISTMAS ISLAND </item>
<item >COCOS KEELING ISLANDS</item>
<item >COLOMBIA </item>
<item >COMOROS </item>
<item >CONGO </item>
<item >CONGO THE DEMOCRATIC REPUBLIC OF THE</item>
<item >COOK ISLANDS </item>
<item >COSTA RICA </item>
<item >CROATIA </item>
<item >CUBA </item>
<item >CYPRUS </item>
<item >CZECH REPUBLIC </item>
<item >C?TE DIVOIRE </item>
<item >DENMARK </item>
<item >DJIBOUTI </item>
<item >DOMINICA </item>
<item >DOMINICAN REPUBLIC </item>
<item >ECUADOR </item>
<item >EGYPT </item>
<item >EL SALVADOR </item>
<item >EQUATORIAL GUINEA </item>
<item >ERITREA </item>
<item >ESTONIA </item>
<item >ETHIOPIA </item>
<item >FALKLAND ISLANDS </item>
<item >FAROE ISLANDS </item>
<item >FIJI </item>
<item >FINLAND </item>
<item >FRANCE </item>
<item >FRENCH GUIANA </item>
<item >FRENCH POLYNESIA </item>
<item >FRENCH SOUTHERN TERRITORIES </item>
<item >GABON </item>
<item >GAMBIA </item>
<item >GEORGIA </item>
<item >GERMANY </item>
<item >GHANA </item>
<item >GIBRALTAR </item>
<item >GREECE </item>
<item >GREENLAND </item>
<item >GRENADA </item>
<item >GUADELOUPE </item>
<item >GUAM </item>
<item >GUATEMALA </item>
<item >GUINEA </item>
<item >GUINEA BISSAU</item>
<item >GUYANA </item>
<item >HAITI </item>
<item >HEARD ISLAND AND MCDONALD ISLANDS </item>
<item >HOLY SEE VATICAN CITY STATE</item>
<item >HONDURAS </item>
<item >HONG KONG </item>
<item >HUNGARY </item>
<item >ICELAND </item>
<item >INDIA </item>
<item >INDONESIA </item>
<item >IRAN ISLAMIC REPUBLIC OF</item>
<item >IRAQ </item>
<item >IRELAND </item>
<item >ISLE OF MAN</item>
<item >ISRAEL </item>
<item >ITALY </item>
<item >JAMAICA </item>
<item >JAPAN </item>
<item >JORDAN </item>
<item >KAZAKHSTAN </item>
<item >KENYA </item>
<item >KIRIBATI </item>
<item >KOREA DEMOCRATIC PEOPLES REPUBLIC OF</item>
<item >KOREA REPUBLIC OF</item>
<item >KUWAIT </item>
<item >KYRGYZSTAN </item>
<item >LAO PEOPLES DEMOCRATIC REPUBLIC </item>
<item >LATVIA </item>
<item >LEBANON </item>
<item >LESOTHO </item>
<item >LIBERIA </item>
<item >LIBYAN ARAB JAMAHIRIYA </item>
<item >LIECHTENSTEIN </item>
<item >LITHUANIA </item>
<item >LUXEMBOURG </item>
<item >MACAO </item>
<item >MACEDONIA THE FORMER YUGOSLAV REPUBLIC OF</item>
<item >MADAGASCAR </item>
<item >MALAWI </item>
<item >MALAYSIA </item>
<item >MALDIVES </item>
<item >MALI </item>
<item >MALTA </item>
<item >MARSHALL ISLANDS </item>
<item >MARTINIQUE </item>
<item >MAURITANIA </item>
<item >MAURITIUS </item>
<item >MAYOTTE </item>
<item >MEXICO </item>
<item >MICRONESIA, FEDERATED STATES OF </item>
<item >MOLDOVA, REPUBLIC OF </item>
<item >MONACO </item>
<item >MONGOLIA </item>
<item >MONTENEGRO</item>
<item >MONTSERRAT </item>
<item >MOROCCO </item>
<item >MOZAMBIQUE </item>
<item >MYANMAR </item>
<item >NAMIBIA </item>
<item >NAURU </item>
<item >NEPAL </item>
<item >NETHERLANDS </item>
<item >NETHERLANDS ANTILLES </item>
<item >NEW CALEDONIA </item>
<item >NEW ZEALAND </item>
<item >NICARAGUA </item>
<item >NIGER </item>
<item >NIGERIA </item>
<item >NIUE </item>
<item >NORFOLK ISLAND </item>
<item >NORTHERN MARIANA ISLANDS </item>
<item >NORWAY </item>
<item >OMAN </item>
<item >PAKISTAN </item>
<item >PALAU </item>
<item >PALESTINIAN TERRITORY, OCCUPIED </item>
<item >PANAMA </item>
<item >PAPUA NEW GUINEA </item>
<item >PARAGUAY </item>
<item >PERU </item>
<item >PHILIPPINES </item>
<item >PITCAIRN </item>
<item >POLAND </item>
<item >PORTUGAL </item>
<item >PUERTO RICO </item>
<item >QATAR </item>
<item >ROMANIA </item>
<item >RUSSIAN FEDERATION </item>
<item >RWANDA </item>
<item >R?UNION </item>
<item >SAINT HELENA </item>
<item >SAINT KITTS AND NEVIS </item>
<item >SAINT LUCIA </item>
<item >SAINT PIERRE AND MIQUELON </item>
<item >SAINT VINCENT AND THE GRENADINES </item>
<item >SAMOA </item>
<item >SAN MARINO </item>
<item >SAO TOME AND PRINCIPE </item>
<item >SAUDI ARABIA </item>
<item >SENEGAL </item>
<item >SERBIA AND MONTENEGRO </item>
<item >SEYCHELLES </item>
<item >SIERRA LEONE </item>
<item >SINGAPORE </item>
<item >SLOVAKIA </item>
<item >SLOVENIA </item>
<item >SOLOMON ISLANDS </item>
<item >SOMALIA </item>
<item >SOUTH AFRICA </item>
<item >SOUTH GEORGIA AND THE SOUTH SANDWICH ISLANDS </item>
<item >SPAIN </item>
<item >SRI LANKA </item>
<item >SUDAN </item>
<item >SURINAME </item>
<item >SVALBARD AND JAN MAYEN </item>
<item >SWAZILAND </item>
<item >SWEDEN </item>
<item >SWITZERLAND </item>
<item >SYRIAN ARAB REPUBLIC </item>
<item >TAIWAN, PROVINCE OF CHINA </item>
<item >TAJIKISTAN </item>
<item >TANZANIA, UNITED REPUBLIC OF </item>
<item >THAILAND </item>
<item >TIMOR-LESTE </item>
<item >TOGO </item>
<item >TOKELAU </item>
<item >TONGA </item>
<item >TRINIDAD AND TOBAGO </item>
<item >TUNISIA </item>
<item >TURKEY </item>
<item >TURKMENISTAN </item>
<item >TURKS AND CAICOS ISLANDS </item>
<item >TUVALU </item>
<item >UGANDA </item>
<item >UKRAINE </item>
<item >UNITED ARAB EMIRATES </item>
<item >UNITED KINGDOM </item>
<item >UNITED STATES </item>
<item >UNITED STATES MINOR OUTLYING ISLANDS </item>
<item >URUGUAY </item>
<item >UZBEKISTAN </item>
<item >VANUATU </item>
<item >VENEZUELA </item>
<item >VIETNAM </item>
<item >VIRGIN ISLANDS</item>
<item >VIRGIN ISLANDS U.S.</item>
<item >WALLIS AND FUTUNA </item>
<item >WESTERN SAHARA </item>
<item >YEMEN </item>
<item >ZAMBIA </item>
<item >ZIMBABWE </item>
<item >LAND ISLANDS </item>
 <item >Others</item>
     </string-array>
     <string-array name="Stuffing_array">
         <item >Stuffing</item>
         <item>De-Stuffing</item>
     </string-array>
     <string-array name="cargo_type_array">
     <item>Breakbulk</item>
<item>Containerized</item>
<item>Diplomatic</item>
<item>Documents</item>
<item>Environmental pollutant cargo</item>
<item>Frozen cargo</item>
<item>General cargo</item>
<item>Hazardous cargo</item>
<item>High value consignments</item>
<item>Household goods </item>
<item>Liquid cargo</item>
<item>Low value dutiable</item>
<item>Low value non-dutiables</item>
<item>Military</item>
<item>Not Applicable</item>
<item>Not-hazardous cargo</item>
<item>Obnoxious</item>
<item>Other non-containerized</item>
<item>Out of gauge</item>
<item>Palletized</item>
<item>Roll-on roll-off</item>
<item>Temperature controlled cargo</item>
<item>Vehicles</item>
     </string-array>
</resources>